--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -13,4 +13,29 @@
 <servlet-name>RegisterServlet</servlet-name>
 <url-pattern>/RegisterServlet</url-pattern>
 </servlet-mapping>
+<display-name>LoginMvc</display-name>
+<welcome-file-list>
+<welcome-file>Login.jsp</welcome-file>
+</welcome-file-list>
+<servlet>
+<description></description>
+<display-name>LoginServlet</display-name>
+<servlet-name>LoginServlet</servlet-name>
+<servlet-class>com.mvc.controller.LoginServlet</servlet-class>
+</servlet>
+<servlet-mapping>
+<servlet-name>LoginServlet</servlet-name>
+<url-pattern>/LoginServlet</url-pattern>
+</servlet-mapping>
+<servlet>
+<description></description>
+<display-name>LogoutServlet</display-name>
+<servlet-name>LogoutServlet</servlet-name>
+<servlet-class>com.mvc.controller.LogoutServlet</servlet-class>
+</servlet>
+<servlet-mapping>
+<servlet-name>LogoutServlet</servlet-name>
+<url-pattern>/LogoutServlet</url-pattern>
+</servlet-mapping>
 </web-app>
+
