--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,38 +1,54 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
-<display-name>RegistrationMVC</display-name>
-<welcome-file-list>
-<welcome-file>Register.jsp</welcome-file>
-</welcome-file-list>
-<servlet>
-<description></description>
-<display-name>RegisterServlet</display-name>
-<servlet-name>RegisterServlet</servlet-name>
-<servlet-class>com.mvc.controller.RegisterServlet</servlet-class>
-</servlet>
-<servlet-mapping>
-<servlet-name>RegisterServlet</servlet-name>
-<url-pattern>/RegisterServlet</url-pattern>
-</servlet-mapping>
-<display-name>LoginMvc</display-name>
-<servlet>
-<description></description>
-<display-name>LoginServlet</display-name>
-<servlet-name>LoginServlet</servlet-name>
-<servlet-class>com.mvc.controller.LoginServlet</servlet-class>
-</servlet>
-<servlet-mapping>
-<servlet-name>LoginServlet</servlet-name>
-<url-pattern>/LoginServlet</url-pattern>
-</servlet-mapping>
-<servlet>
-<description></description>
-<display-name>LogoutServlet</display-name>
-<servlet-name>LogoutServlet</servlet-name>
-<servlet-class>com.mvc.controller.LogoutServlet</servlet-class>
-</servlet>
-<servlet-mapping>
-<servlet-name>LogoutServlet</servlet-name>
-<url-pattern>/LogoutServlet</url-pattern>
-</servlet-mapping>
+	<display-name>RegistrationMVC</display-name>
+	<welcome-file-list>
+		<welcome-file>Register.jsp</welcome-file>
+	</welcome-file-list>
+	<servlet>
+		<description></description>
+		<display-name>RegisterServlet</display-name>
+		<servlet-name>RegisterServlet</servlet-name>
+		<servlet-class>com.mvc.controller.RegisterServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>RegisterServlet</servlet-name>
+		<url-pattern>/RegisterServlet</url-pattern>
+	</servlet-mapping>
+		<display-name>LoginMvc</display-name>
+	<servlet>
+		<description></description>
+		<display-name>LoginServlet</display-name>
+		<servlet-name>LoginServlet</servlet-name>
+		<servlet-class>com.mvc.controller.LoginServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>LoginServlet</servlet-name>
+		<url-pattern>/LoginServlet</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<description></description>
+		<display-name>LogoutServlet</display-name>
+		<servlet-name>LogoutServlet</servlet-name>
+		<servlet-class>com.mvc.controller.LogoutServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>LogoutServlet</servlet-name>
+		<url-pattern>/LogoutServlet</url-pattern>
+	</servlet-mapping>
+	<servlet>
+        <servlet-name>Search</servlet-name>
+        <servlet-class>com.mvc.controller.Search</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>Search</servlet-name>
+        <url-pattern>/Search</url-pattern>
+    </servlet-mapping>
+    <session-config>
+        <session-timeout>
+            30
+        </session-timeout>
+    </session-config>
+    <welcome-file-list>
+        <welcome-file>index.jsp</welcome-file>
+    </welcome-file-list>
 </web-app>
 
